2005-11-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Semaphore.cs: New (2.0). Incomplete (missing runtime support).
	* SemaphoreFullException.cs: New (2.0).

2001-09-21  Dick Porter  <dick@ximian.com>

	* ThreadExceptionEventArgs.cs: Implemented

2001-09-13  Dick Porter  <dick@ximian.com>

	* ThreadExceptionEventArgs.cs, ThreadExceptionEventHandler.cs:
	More System.Threading stubs, in the System assembly.
