@@ -1,3 +1,7 @@
+2005-11-26  Dick Porter  <dick@ximian.com>
+
+	* Semaphore.cs: Implemented with icalls
+
 2005-11-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Semaphore.cs: New (2.0). Incomplete (missing runtime support).
